Repackage dead property handling into a Catalina style store API
Add a PropertyStore interface with streamlined API.
Take advantage of this as an excuse to repackage the simple non
persistent store into a basic default option.
Add logging "warnings" about what it does and how to configure it.
No functional change but this way the WebDAV Servlet is fully testable
by default (Litmus works, for example).

--- a/java/org/apache/catalina/servlets/LocalStrings.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings.properties
@@ -55,5 +55,8 @@ defaultServlet.xslError=XSL transformer error
 webdavservlet.externalEntityIgnored=The request included a reference to an external entity with PublicID [{0}] and SystemID [{1}] which was ignored
 webdavservlet.inputstreamclosefail=Failed to close the inputStream of [{0}]
 webdavservlet.jaxpfailed=JAXP initialization failed
+webdavservlet.memorystore=Non persistent memory storage will be used for dead properties; the 'propertyStore' init parameter of the Servlet may be used to configure a custom store implementing the 'WebdavServlet.PropertyStore' interface
 webdavservlet.nonWildcardMapping=The mapping [{0}] is not a wildcard mapping and should not be used for the WebDAV Servlet
 webdavservlet.noSecret=Generation of secure lock ids need a configured 'secret' init parameter on the Servlet
+webdavservlet.noStoreParameter=Init parameter [{0}] with value [{1}] was not found on the configured store
+webdavservlet.storeError=Error creating store of class [{0}], the default memory store will be used instead
