--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,9 @@ jobs:
       matrix:
         isMain:
           - ${{ contains(github.ref, 'main') }}
-        java: [ 17, 21, 23, 24-ea ]
+        java: [ 21, 23, 24-ea ]
         os: [ ubuntu-latest, windows-latest, macos-latest ]
         exclude:
-          - isMain: true
-            java: 17
           - os: windows-latest
             java: 21
           - os: macos-latest
