Needs the property as well

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -43,6 +43,8 @@ jobs:
     - name: Build
       run: |
         ant -noinput validate
+      env:
+        ANT_OPTS: -Dexecute.validate=true
 
       continue-on-error:
         false
