ExpiresFilter add more should-not-cacheable verification
skip response with Cache-Control: no-store.
enhance cacheable verification: add configuration for cacheable methods, supported status codes(included list).

--- a/java/org/apache/catalina/filters/LocalStrings.properties
+++ b/java/org/apache/catalina/filters/LocalStrings.properties
@@ -32,6 +32,9 @@ csrfPrevention.rejectNoNonce=Rejecting request for [{0}] with session [{1}] beca
 csrfPrevention.unsupportedPattern=Unsupported pattern [{0}]
 
 expiresFilter.exceptionProcessingParameter=Exception processing configuration parameter [{0}]:[{1}]
+expiresFilter.skippedMethod=Request [{0}] with response status [{1}] content-type [{2}], skip method [{3}]
+expiresFilter.noStoreAlreadyDefined=Request [{0}] with response status [{1}] content-type [{2}], Cache-Control header with no-store already defined
+expiresFilter.notCacheableStatusCode=Request [{0}] with response status [{1}] content-type [{2}], given status is not cacheable
 expiresFilter.expirationHeaderAlreadyDefined=Request [{0}] with response status [{1}] content-type [{2}], expiration header already defined
 expiresFilter.filterInitialized=Filter initialized with configuration [{0}]
 expiresFilter.invalidDurationNumber=Invalid duration (number) [{0}] in directive [{1}]
@@ -43,7 +46,7 @@ expiresFilter.noExpirationConfiguredForContentType=No Expires configuration foun
 expiresFilter.numberError=Exception parsing number at position [{0}] (zero based) in comma delimited list [{1}]
 expiresFilter.responseAlreadyCommitted=Request [{0}], cannot apply ExpiresFilter on already committed response.
 expiresFilter.setExpirationDate=Request [{0}] with response status [{1}] content-type [{2}], set expiration date [{3}]
-expiresFilter.skippedStatusCode=Request [{0}] with response status [{1}] content-type [{1}], skip expiration header generation for given status
+expiresFilter.skippedStatusCode=Request [{0}] with response status [{1}] content-type [{2}], skip expiration header generation for given status
 expiresFilter.startingPointInvalid=Invalid starting point (access|now|modification|a<seconds>|m<seconds>) [{0}] in directive [{1}]
 expiresFilter.startingPointNotFound=Starting point (access|now|modification|a<seconds>|m<seconds>) not found in directive [{0}]
 expiresFilter.unknownParameterIgnored=Unknown parameter [{0}] with value [{1}] is ignored !
