--- a/java/org/apache/catalina/webresources/LocalStrings.properties
+++ b/java/org/apache/catalina/webresources/LocalStrings.properties
@@ -26,6 +26,8 @@ cache.addFail=Unable to add the resource at [{0}] to the cache for web applicati
 cache.backgroundEvictFail=The background cache eviction process was unable to free [{0}] percent of the cache for Context [{1}] - consider increasing the maximum size of the cache. After eviction approximately [{2}] KiB of data remained in the cache.
 cache.objectMaxSizeTooBig=The value of [{0}] KiB for objectMaxSize is larger than the limit of maxSize/20 so has been reduced to [{1}] KiB
 cache.objectMaxSizeTooBigBytes=The value specified for the maximum object size to cache [{0}] KiB is greater than Integer.MAX_VALUE bytes which is the maximum size that can be cached. The limit will be set to Integer.MAX_VALUE bytes.
+cache.sizeTracking.add=Increased cache size by [{0}] for item [{1}] at [{2}] making total cache size [{3}]
+cache.sizeTracking.removed=Decreased cache size by [{0}] for item [{1}] at [{2}] making total cache size [{3}]
 
 cachedResource.invalidURL=Unable to create an instance of CachedResourceURLStreamHandler because the URL [{0}] is malformed
 
