Fix BZ 69415. ExpiresFilter is too eager to add headers
https://bz.apache.org/bugzilla/show_bug.cgi?id=69415
The headers should only be added to methods that support caching and
where no-store has not been set

--- a/java/org/apache/catalina/filters/LocalStrings.properties
+++ b/java/org/apache/catalina/filters/LocalStrings.properties
@@ -34,8 +34,10 @@ csrfPrevention.rejectNoCache=Rejecting request for [{0}] with session [{1}] due 
 csrfPrevention.rejectNoNonce=Rejecting request for [{0}] with session [{1}] because no CSRF nonce was found
 csrfPrevention.unsupportedPattern=Unsupported pattern [{0}]
 
+expiresFilter.cacheControlNoStore=Request [{0}] with response status [{1}] content-type [{2}], Cache-Control: no-store header already defined
 expiresFilter.exceptionProcessingParameter=Exception processing configuration parameter [{0}]:[{1}]
-expiresFilter.expirationHeaderAlreadyDefined=Request [{0}] with response status [{1}] content-type [{2}], expiration header already defined
+expiresFilter.expirationHeaderAlreadyDefined=Request [{0}] with response status [{1}] content-type [{2}], Expires header already defined
+expiresFilter.invalidMethod=Request [{0}] with request method [{1}], non-cacheable method
 expiresFilter.filterInitialized=Filter initialized with configuration [{0}]
 expiresFilter.invalidDurationNumber=Invalid duration (number) [{0}] in directive [{1}]
 expiresFilter.invalidDurationUnit=Invalid duration unit (years|months|weeks|days|hours|minutes|seconds) [{0}] in directive [{1}]
