--- a/java/org/apache/tomcat/util/buf/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings.properties
@@ -38,6 +38,11 @@ messageBytes.illegalCharacter=The Unicode character [{0}] at code point [{1}] ca
 stringCache.byteTime=ByteCache generation time: {0}ms
 stringCache.charTime=CharCache generation time: {0}ms
 
+toStringUtil.classpath.classloader=ClassLoader [{0}] loading classes from:
+toStringUtil.classpath.header=Logging class path for each class loader in hierarchy to aid debugging of ClassNotFoundException
+toStringUtil.classpath.platform=JRE provided classes
+toStringUtil.classpath.unknown=Unknown - not an instance of URLClassLoader
+
 uDecoder.eof=End of file (EOF)
 uDecoder.isHexDigit=The hexadecimal encoding is invalid
 uDecoder.noSlash=The encoded slash character is not allowed
