Add two missing strings

--- a/java/org/apache/catalina/servlets/LocalStrings.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings.properties
@@ -42,6 +42,8 @@ defaultServlet.blockExternalEntity2=Blocked access to external entity with name 
 defaultServlet.blockExternalSubset=Blocked access to external subset with name [{0}] and baseURI [{1}]
 defaultServlet.directory.parent=Up To [{0}]
 defaultServlet.directory.title=Directory Listing For [{0}]
+defaultServlet.globalXSLTTooBig=The global XSLT file [{0}] is too big to buffer
+defaultServlet.invalidRedirectStatusCode=Invalid redirect status code [{0}]
 defaultServlet.missingResource=The requested resource [{0}] is not available
 defaultServlet.noResources=No static resources were found
 defaultServlet.readerCloseFailed=Failed to close reader
