Add persistent PropertyStore for WebDAV

--- a/java/org/apache/catalina/servlets/LocalStrings.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings.properties
@@ -61,3 +61,6 @@ webdavservlet.memorystore=Non persistent memory storage will be used for dead pr
 webdavservlet.nonWildcardMapping=The mapping [{0}] is not a wildcard mapping and should not be used for the WebDAV Servlet
 webdavservlet.noStoreParameter=Init parameter [{0}] with value [{1}] was not found on the configured store
 webdavservlet.storeError=Error creating store of class [{0}], the default memory store will be used instead
+
+webdavservlet.dataSourceStore.error=Error processing [{0}] on dead properties for path [{1}]
+webdavservlet.dataSourceStore.noDataSource=DataSource [{0}] was not found in the webapp environment
