--- a/conf/web.xml
+++ b/conf/web.xml
@@ -108,11 +108,11 @@
   <!--                       listings is enabled? [true]                    -->
   <!--                                                                      -->
   <!--   allowPartialPut     Should the server treat an HTTP PUT request    -->
-  <!--                       with a Range header as a partial PUT? Note     -->
-  <!--                       that while RFC 7233 clarified that Range       -->
-  <!--                       headers only valid for GET requests, RFC 9110  -->
-  <!--                       (which obsoletes RFC 7233) now allows partial  -->
-  <!--                       puts. [true]                                   -->
+  <!--                       with a Content-Range header as a partial PUT?  -->
+  <!--                       Note that while RFC 7233 clarified that        -->
+  <!--                       Content-Range headers only valid for GET       -->
+  <!--                       requests, RFC 9110 (which obsoletes RFC 7233)  -->
+  <!--                       now allows partial puts. [true]                -->
   <!--                                                                      -->
   <!--   directoryRedirectStatusCode                                        -->
   <!--                       Status code to use for directory redirects.    -->
