--- a/modules/cxf/pom.xml
+++ b/modules/cxf/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
-        <version>26</version>
+        <version>33</version>
     </parent>
 
     <groupId>org.apache.tomcat</groupId>
@@ -29,32 +29,32 @@
     <name>Apache CXF for Apache Tomcat CDI</name>
     <description>Apache CXF packaged for Apache Tomcat CDI</description>
     <!-- This is the Apache CXF version -->
-    <version>3.5.3</version>
+    <version>4.1.0</version>
     <packaging>jar</packaging>
 
     <properties>
-        <geronimo-jcdi.version>1.3</geronimo-jcdi.version>
-        <javax.json-api.version>1.1.4</javax.json-api.version>
-        <javax.json.bind-api.version>1.0</javax.json.bind-api.version>
-        <johnzon.version>1.2.18</johnzon.version>
+        <jakarta-enterprise-cdi.version>4.0.1</jakarta-enterprise-cdi.version>
+        <jakarta.json-api.version>2.1.3</jakarta.json-api.version>
+        <jakarta.json.bind-api.version>3.0.0</jakarta.json.bind-api.version>
+        <johnzon.version>2.0.0</johnzon.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jcdi_2.0_spec</artifactId>
-            <version>${geronimo-jcdi.version}</version>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>${jakarta-enterprise-cdi.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.json</groupId>
-            <artifactId>javax.json-api</artifactId>
-            <version>${javax.json-api.version}</version>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>${jakarta.json-api.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.json.bind</groupId>
-            <artifactId>javax.json.bind-api</artifactId>
-            <version>${javax.json.bind-api.version}</version>
+            <groupId>jakarta.json.bind</groupId>
+            <artifactId>jakarta.json.bind-api</artifactId>
+            <version>${jakarta.json.bind-api.version}</version>
         </dependency>
         <!-- Apache CXF -->
         <dependency>
@@ -96,16 +96,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -144,13 +141,29 @@
                             </artifactSet>
 					        <filters>
                                 <filter>
+                                    <artifact>org.apache.johnzon:johnzon-jsonb</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/services/jakarta.enterprise.inject.spi.Extension</exclude>
+                                    </excludes>
+                                </filter>
+                                <filter>
+                                    <artifact>org.apache.cxf:cxf-integration-cdi</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/beans.xml</exclude>
+                                    </excludes>
+                                </filter>
+                                <filter>
 						            <artifact>*:*</artifact>
 						            <excludes>
 										<exclude>META-INF/*.SF</exclude>
 										<exclude>META-INF/*.DSA</exclude>
 										<exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF/DEPENDENCIES</exclude>
+                                        <exclude>META-INF/LICENSE.md</exclude>
 										<exclude>META-INF/LICENSE.txt</exclude>
 										<exclude>META-INF/LICENSE</exclude>
+                                        <exclude>META-INF/MANIFEST.MF</exclude>
+                                        <exclude>META-INF/NOTICE.md</exclude>
 										<exclude>META-INF/NOTICE.txt</exclude>
 										<exclude>META-INF/NOTICE</exclude>
 										<!-- Unneeded configuration files -->
