--- a/java/org/apache/tomcat/util/compat/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings.properties
@@ -14,3 +14,5 @@
 # limitations under the License.
 
 jre22Compat.javaPre22=Class not found so assuming code is running on a pre-Java 22 JVM
+
+jre24Compat.javaPre24=Method not found so assuming code is running on a pre-Java 24 JVM
