Enhance ParameterLimitValve functionality and add tests
- Modified `setUrlPatternLimits` to accept `BufferedReader` input, allowing for flexible configuration from files.
- Updated `ParameterLimitValve` to handle configuration files:
  - Supports `parameter_limit.config` in `/WEB-INF/` for contexts and configurable host-level paths.
  - Properly parses line-by-line configuration, skipping comments and empty lines.
  - Handles multiple `=` in patterns by splitting at the last `=`.
- Enhanced `invoke` method to apply parameter limits based on decoded URIs and URL patterns.
- Added integration tests in `TestParameterLimitValve`
- Introduced logging for debugging configuration parsing and application.

--- a/java/org/apache/catalina/valves/LocalStrings.properties
+++ b/java/org/apache/catalina/valves/LocalStrings.properties
@@ -171,3 +171,9 @@ stuckThreadDetectionValve.interrupted=Thread interrupted after the request is fi
 stuckThreadDetectionValve.notifyStuckThreadCompleted=Thread [{0}] (id=[{3}]) was previously reported to be stuck but has completed. It was active for approximately [{1}] milliseconds.{2,choice,0#|0< There is/are still [{2}] thread(s) that are monitored by this Valve and may be stuck.}
 stuckThreadDetectionValve.notifyStuckThreadDetected=Thread [{0}] (id=[{6}]) has been active for [{1}] milliseconds (since [{2}]) to serve the same request for [{4}] and may be stuck (configured threshold for this StuckThreadDetectionValve is [{5}] seconds). There is/are [{3}] thread(s) in total that are monitored by this Valve and may be stuck.
 stuckThreadDetectionValve.notifyStuckThreadInterrupted=Thread [{0}] (id=[{5}]) has been interrupted because it was active for [{1}] milliseconds (since [{2}]) to serve the same request for [{3}] and was probably stuck (configured interruption threshold for this StuckThreadDetectionValve is [{4}] seconds).
+
+parameterLimitValve.closeError=Error closing configuration
+parameterLimitValve.invalidLine=Each line must contain at least one '=' character. Invalid line [{0}]
+parameterLimitValve.noConfiguration=No configuration resource found [{0}]
+parameterLimitValve.readConfiguration=Read configuration from [/WEB-INF/{0}]
+parameterLimitValve.readError=Error reading configuration
