--- a/build.xml
+++ b/build.xml
@@ -2043,7 +2043,8 @@
           errorproperty="test.result.error"
           failureproperty="test.result.failure"
           haltonfailure="${test.haltonfailure}"
-          threads="${test.threads}">
+          threads="${test.threads}"
+          maxmemory="256m">
 
           <jvmarg value="${test.jvmarg.egd}"/>
           <jvmarg value="-Dfile.encoding=UTF-8"/>
