Refactor unit test memory limit so it is unset by default
A fixed limit didn't work for all use cases. This approach restores the
previous default and allows developers to configure their own if
required.

--- a/build.xml
+++ b/build.xml
@@ -2024,6 +2024,8 @@
   <property name="opens.sunrmi" value="--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"/>
   <property name="opens.javautil" value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
   <property name="opens.javautilconcurrent" value="--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"/>
+  <!-- Set memory properties (unset by default) -->
+  <property name="test.xmx" value="-Dnoop"/>
 
   <macrodef name="runtests"
             description="Runs the unit tests using the specified connector.
@@ -2043,11 +2045,11 @@
           errorproperty="test.result.error"
           failureproperty="test.result.failure"
           haltonfailure="${test.haltonfailure}"
-          threads="${test.threads}"
-          maxmemory="256m">
+          threads="${test.threads}">
 
           <jvmarg value="${test.jvmarg.egd}"/>
           <jvmarg value="-Dfile.encoding=UTF-8"/>
+          <jvmarg value="${test.xmx}"/>
           <jvmarg value="${runtests.librarypath}"/>
           <jvmarg value="${test.formatter}"/>
           <jvmarg value="-Djava.net.preferIPv4Stack=${java.net.preferIPv4Stack}"/>
