Rename new property codesigning.tool to nsis.tool

--- a/build.xml
+++ b/build.xml
@@ -2500,7 +2500,7 @@
     <condition property="wine.ok">
       <or>
         <and>
-          <equals arg1="${codesigning.tool}" arg2="wine" forcestring="true"/>
+          <equals arg1="${nsis.tool}" arg2="wine" forcestring="true"/>
           <available file="wine" filepath="${env.PATH}" />
         </and>
       </or>
@@ -2508,7 +2508,7 @@
     <condition property="makensis.ok">
       <or>
         <and>
-          <equals arg1="${codesigning.tool}" arg2="makensis" forcestring="true"/>
+          <equals arg1="${nsis.tool}" arg2="makensis" forcestring="true"/>
           <available file="makensis" filepath="${env.PATH}" />
         </and>
       </or>
@@ -2523,9 +2523,9 @@
   </target>
 
   <target name="-installer-init" depends="-installer-pre-init" unless="${installer.ok}">
-    <fail message="The executable ${codesigning.tool} was not found on the current path.
+    <fail message="The executable ${nsis.tool} was not found on the current path.
 Either wine or makensis are required to build the Windows installer on a non-Windows platform.
-Choose the tool by setting property codesigning.tool in build.properties.
+Choose the tool by setting property nsis.tool in build.properties.
 To skip building the Windows installer, set the skip.installer property in build.properties" />
   </target>
 
